codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__image_preparation_disconnected.snap
---
source: tui/src/chatwidget/tests/composer_submission.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80)).replace('◦', \"•\")"
---
• Reconnect failed — check the endpoint, then relaunch (0s)

• Queued follow-up inputs
  ↳ x
    shift + ← edit last queued message
────────────────────────────────────────────────────────────────────────────────
› describe
────────────────────────────────────────────────────────────────────────────────
   ctrl+c quit
