codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_command_execution_strips_shell_wrapper.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 1140
expression: blob
---
• You ran python3 -c 'print("Hello, world!")'
  └ Hello, world!
