codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_command_output_delta_interrupted.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: completed
---

CODEX · Tool Call
$ printf 'stdout\nstderr\n'
stdout
stderr
✗ (1) • <duration>
